[package]
name = "poker"
version = "0.1.0"
edition = "2024"

[dependencies]
leo-bindings = { git = "https://github.com/henrikkv/leo-bindings" }
credits_bindings = { git = "https://github.com/henrikkv/leo-bindings" }
mental_poker_bindings = { path = "./leo" }
commutative_encryption_bindings = { path = "./leo/imports/commutative_encryption" }

rand = "0.8"
snarkvm = { git = "http://github.com/ProvableHQ/snarkVM.git", rev = "eb44d39" }
colored = "3.0.0"
