[package]
name = "poker"
version = "0.1.0"
edition = "2024"

[dependencies]
leo-bindings = { git = "https://github.com/henrikkv/leo-bindings" }
credits_bindings = { git = "https://github.com/henrikkv/leo-bindings" }
mental_poker_bindings = { path = "./leo" }
commutative_encryption_bindings = { path = "./leo/imports/commutative_encryption" }

rand = "0.8"
snarkvm = "4.3.1"
colored = "3.0.0"
ratatui = "0.29"
crossterm = "0.28"
anyhow = "1.0.100"

[[bin]]
name = "poker"
path = "src/bin/poker.rs"

[[bin]]
name = "poker_test"
path = "src/bin/poker_test.rs"
