[package]
name = "poker"
version = "0.1.0"
edition = "2024"

[dependencies]
leo-bindings = { git = "https://github.com/henrikkv/leo-bindings" }
credits_bindings = { git = "https://github.com/henrikkv/leo-bindings" }
mental_poker_bindings = { path = "./leo" }

rand = "0.8"
snarkvm = { git = "https://github.com/henrikkv/snarkVM", branch = "leo-bindings" }
colored = "3.0.0"
ratatui = "0.29"
crossterm = "0.28"
anyhow = "1.0.100"
log = "0.4"
env_logger = "0.11"
clap = { version = "4.5", features = ["derive"] }
dotenvy = "0.15"

[[bin]]
name = "poker"
path = "src/bin/poker.rs"

[[bin]]
name = "poker_test"
path = "src/bin/poker_test.rs"
