
[package]
name = "mental_poker_bindings"
version = "0.1.0"
edition = "2024"
[lib]
name = "mental_poker_bindings"
path = "lib.rs"

[dependencies]
leo-bindings = { git = "https://github.com/henrikkv/leo-bindings" }
commutative_encryption_bindings = { path = "./imports/commutative_encryption" }

# BEGIN IMPORTS
# credits_bindings = { git = "https://github.com/henrikkv/leo-bindings" }
# END IMPORTS
