[package]
name = "commutative_encryption_bindings"
version = "0.1.0"
edition = "2024"

[lib]
name = "commutative_encryption_bindings"
path = "lib.rs"

[dependencies]
leo-bindings.workspace = true

[build-dependencies]
leo-bindings-core = { git = "https://github.com/henrikkv/leo-bindings" }
serde_json = "1"
